snapshots/stoat/tui/stoat__test_harness__dock_minimized_overlay.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: prompt
size: 60x10
---

                                                           [0m[36m│[0m
                                                           [0m[36m│[0m
                                                           [0m[36m│[0m
                                                           [0m[36m│[0m
                                                           [0m[36m│[0m
                                                           [0m[36m│[0m
                                                           [0m[36m│[0m
                                                           [0m[36m│[0m
[0m[90m[40m [scratch]                                              1:1 [0m
