snapshots/stoat/tui/stoat__test_harness__dock_overlays_split_panes.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_claude
focused: #2 of 2
mode: normal
size: 80x10
---
                                       [0m[36m│[0m
                                       [0m[36m│┌──────────────────────────────────────┐[0m
                                       [0m[36m││[0m[90mClaude[0m                                [0m[36m│[0m
                                       [0m[36m││[0m                                      [0m[36m│[0m
                                       [0m[36m││[0m                                      [0m[36m│[0m
                                       [0m[36m││[0m                                      [0m[36m│[0m
                                       [0m[36m││[0m[90m--------------------------------------[0m[36m│[0m
                                       [0m[36m││[0m[7m [0m                                     [0m[36m│[0m
                                       [0m[36m│└──────────────────────────────────────┘[0m
[0m[90m[40m [scratch]                         1:1 [0m[36m│[0m[90m[40m [scratch]                          1:1 [0m
