snapshots/stoat/tui/stoat__test_harness__nested_splits.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: d
focused: #3 of 3
mode: normal
size: 80x24
---
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m[90m[40m [scratch]                          1:1 [0m
                                       [0m[36m│────────────────────────────────────────[0m
                                       [0m[36m│[0m[7m [0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
                                       [0m[36m│[0m
[0m[90m[40m [scratch]                         1:1 [0m[36m│[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]           1:1 [0m
