snapshots/stoat/tui/stoat__test_harness__rebase_reword_mode.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: enter
focused: #1 of 1
mode: reword
size: 90x12
---
[0m[1m[35mreword commit- [reword][0m
[0m[90mi insert   h/j/k/l move   Ctrl-s save   Escape abort[0m
[0m[90moriginal: c2: middle[0m

[0m[97mc2: middle[0m[7m [0m






[0m[1m[30m[41m RWD [0m[1m[97m[100m repo [0m[97m[100mreword                                                                         [0m
